<resources>
    <string name="app_name">AdventureMaps</string>
    <string name="hint_nickName">NickName</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_the_password">Repeat the password</string>
    <string name="forgotten_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="create_count">Create Count</string>
    <string name="email_empty">Email empty!</string>
    <string name="password_empty">Password empty!</string>
    <string name="all_fields_required">All fields are required!</string>
    <string name="password_not_equals">Password not equals!</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_error">Email or password incorrect!</string>
    <string name="create_count_error">Could not create account!</string>
    <string name="create_count_error_colision">The user already exist in the app!</string>
    <string name="create_count_successful">Account created!</string>
    <string name="title_activity_main_tabbet">MainTabbetActivity</string>
    <string name="tab_text_1">Start</string>
    <string name="tab_text_2">Localizations</string>
    <string name="tab_text_3">Routes</string>
    <string name="tab_text_4">Maps</string>
    <string name="tab_text_5">User</string>
    <string name="nickName_form">NickName: </string>
    <string name="email_form">Email: </string>
    <string name="number_user_routes_form">Routes created: </string>
    <string name="number_user_localizations_form">Localizations created: </string>
    <string name="change_password">Change password</string>
    <string name="tutorial">Tutorial</string>
    <string name="logout">Logout</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="password_updated">Password updated!</string>
    <string name="error_password_updated">Error to update the password!</string>
    <string name="send_new_password">Send new password</string>
    <string name="send_new_password_error">Error to send the new password!</string>
    <string name="sent_new_password">sent the new password to your email!</string>
    <string name="password_lenght_error">The password must be larger than 6!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_logout">Logout</string>
    <string name="question_logout">Do you really want logout? You cant access the application without connection!</string>
    <string name="basic_offline_deleted_toast">Delete the last item in the offlineRegions</string>
    <string name="simple_offline_end_progress_success">Calculate the download percentage</string>
    <string name="access_token">pk.eyJ1IjoicmFjY29vbm11cmt5IiwiYSI6ImNrNWM3bWpscjAxcXEzZm1zdHZqZ2JmNTIifQ.NEMaG9Fj2j5Z9B2a02PIbg</string>
    <string name="download_button_text">Download Map</string>
    <string name="list_button_text">Map List</string>
    <string name="set_region_name_hint">Name of the region</string>
    <string name="dialog_toast">The region name is empty</string>
    <string name="dialog_title">Name of the new Region</string>
    <string name="dialog_message">Download the region that you are seeing</string>
    <string name="dialog_positive_button">Download</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="end_progress_success">Download Success!</string>
    <string name="toast_no_regions_yet">No regions yet!</string>
    <string name="navigate_title">Maps</string>
    <string name="navigate_positive_button">Navigate to</string>
    <string name="navigate_negative_button_title">Cancel</string>
    <string name="toast_region_deleted">Region eliminated</string>
    <string name="navigate_neutral_button_title">Delete</string>
    <string name="region_name">region_name</string>
    <string name="exceeded_download_limit">Exceeded download limit</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="question_delete_region">Do you really want delete this region?</string>
    <string name="order_by_form">Order by: </string>
    <string name="new_route">New route</string>
    <string name="trash">Trash</string>
    <string name="hint_route_name">Route name</string>
    <string name="route_name_empty">Route name empty!</string>
    <string name="insufficient_markers">The route must have at least two markers!</string>
    <string name="save_route">Save Route</string>
    <string name="dialog_message_route">Insert a route name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="route_saved">Route Saved!</string>
    <string name="question_delete_route">Do you really want delete this routes?</string>
    <string name="routes_deleted">Routes deleted!</string>
    <string name="name">Name</string>
    <string name="date_of_creation">Date of creation</string>
    <string name="select_a_filter">Select a filter</string>
    <string name="no_exist_selected_route">There is no selected route!</string>
    <string name="question_delete_localization_point">Do you really want delete this localization point?</string>
    <string name="localization_point_deleted">Localization point deleted!</string>
    <string name="error_owner_localization_point">You do not own this location point. You can"'t delete it!</string>
    <string name="confirm_insert">Confirm insertion</string>
    <string name="localization_point_created">Localization point created!</string>
    <string name="question_create_localization_point">Do you really want create an route in this coordenates?</string>
    <string name="cant_delete_localization_owner">You are not the owner, you cannot delete it.</string>
    <string name="description">Description</string>
    <string name="localization_types">Localization Types</string>
    <string name="potable_water">Potable Water</string>
    <string name="food">Food</string>
    <string name="rest_area">Rest Area</string>
    <string name="hunting">Hunting</string>
    <string name="culture">Culture</string>
    <string name="hotel">Lodging house/Hotel</string>
    <string name="natural_site">Natural Site</string>
    <string name="fishing">Fishing</string>
    <string name="vivac">Vivac</string>
    <string name="camping">Camping</string>
    <string name="create_localization_point">Create Localization Point</string>
    <string name="name_and_description_required">The name and description are required!</string>
    <string name="min_one_type_required">You must select at least one type!</string>
    <string name="name_form">Name: </string>
    <string name="description_form">Description: </string>
    <string name="edit_localization_point">Edit Locallization Point</string>
    <string name="save_datas">Save Datas</string>
    <string name="localization_point_saved">Localization Point Saved!</string>
    <string name="images_deleted">Images Deleted!</string>
    <string name="question_delete_images">Do you really want delete this images?</string>
    <string name="no_exist_selected_image">There is no selected images!</string>
    <string name="you_havent_picked_image">You haven"'t picked Image!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="image_uploaded">Image uploaded!</string>
    <string name="error_upload_image">Error to upload the image!</string>
    <string name="no_permisission_to_delete_image">You don"'t have permission to delete this image!</string>
    <string name="share">Share</string>
    <string name="no_exist_selected_localization">There is no selected localization!</string>
    <string name="error_selected_localizations_empty">You have not selected any location!</string>
    <string name="error_selected_localizations_overflowed">You can only share one location at a time!</string>
    <string name="confirm_share">Confirm Share</string>
    <string name="question_share_localization_point">Are you sure you want to share the location? You can not stop sharing it!</string>
    <string name="localization_point_shared">Localization point shared!</string>
    <string name="error_selected_localizations_already_shared">The location is already shared</string>
    <string name="error_selected_localizations_no_owner">You cannot select a location that is not yours!</string>
    <string name="error_read_external_storage">You must accept write permissions to store images!</string>
    <string name="read_external_storage_permission_granted">Read external storage permission granted!</string>
    <string name="filter_title">Localizations Filters</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="filters">Filters</string>
    <string name="error_localization_no_exist">The location no longer exists!</string>
    <string name="validate_location">Validate location</string>
    <string name="confirm_valoration">Confirm valoration</string>
    <string name="question_good_valoration">Do you want to value this location positively?</string>
    <string name="question_bad_valoration">Do you want to value this location negatively?</string>
    <string name="valoration_saved">Valoration Saved!</string>
    <string name="page_1">Start Map</string>
    <string name="page_2">Markers</string>
    <string name="page_3">Locations</string>
    <string name="page_4">Routes</string>
    <string name="page_5">Offline Maps</string>
    <string name="next_fragment">Next Page</string>
    <string name="last_fragment">Last Page</string>
    <string name="startMap_description_simple_click">You can click anywhere on the map to get the click position</string>
    <string name="startMap_description_long_click">You can keep anywhere on the map that does not contain a marker to open a dialog for creating a new location point.</string>
    <string name="startMap_description_click_marker">If you click on a marker, a small lower tab will open with which you can try to delete it or see its details.</string>
    <string name="startMap_description_filter">By clicking on the filter button you can filter the location points shown on the map.</string>
    <string name="marker_general_description">The name and description will be shown on the details screen of a location. In addition to the ambient types that characterize it and a link to its image gallery.</string>
    <string name="marker_description_validate_location">You can click on the hit like o dislike icons to check if the location is valid.</string>
    <string name="marker_image_gallery_multiple_selection">With a long click on an image you can activate multiple selection on them. You can only select the images you inserted or all if you created the location point. Your images will have a green background.</string>
    <string name="marker_image_gallery_delete_images">To delete one or more images, they must be selected.</string>
    <string name="marker_image_gallery_upload_image">Press this icon to upload an image from the device gallery.</string>
    <string name="routes_description_multiple_selection">With a long click on an element you can activate multiple selection on them.</string>
    <string name="routes_description_new_route">You can create a new custom route.</string>
    <string name="routes_description_multiple_delete">You can delete the selected routes.</string>
    <string name="different_markers_description">The locations that you have marked as favorites will appear in gold on the map and those that have not, will appear with a user icon if they are yours or with a red marker if they are not.</string>
    <string name="cluster_map_description">Automatically with the change of zoom on the map, the locations will be grouped into regions when they are very close together and will be separated as we increase the zoom in these regions.</string>
</resources>