<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayoutLoginActivity"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="20"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/ImageViewLoginActivity"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:background="@drawable/logo_adventure_maps"></ImageView>

    </LinearLayout>

    <EditText
        android:id="@+id/EditTextNickNameActivityLogin"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="18"
        android:layout_marginTop="5sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"></EditText>

    <EditText
        android:id="@+id/EditTextPasswordActivityLogin"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="18"
        android:layout_marginTop="0sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:inputType="textPassword"
        android:hint="@string/hint_password"></EditText>

    <TextView
        android:id="@+id/TextViewForgottenPasswordActivityLogin"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="8"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="30sp"
        android:textColor="@color/UnderlinedBlue"
        android:clickable="true"
        android:onClick="throwSendNewPasswordActivity"
        android:text="@string/forgotten_password"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="18"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLoginActivityLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/background_login_buttons"
            android:onClick="tryLogUser"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="18"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp">

        <Button
            android:id="@+id/btnCreateCountActivityLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_count"
            android:background="@drawable/background_login_buttons"
            android:onClick="throwCreateCountActivity"></Button>

    </LinearLayout>

</LinearLayout>