<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email_form"></TextView>

        <TextView
            android:id="@+id/TextViewEmailInfoActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nickName_form"></TextView>

        <TextView
            android:id="@+id/TextViewNickNameInfoActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number_user_localizations_form"></TextView>

        <TextView
            android:id="@+id/TextViewNumberLocalizationsInfoActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number_user_localizations_form"></TextView>

        <TextView
            android:id="@+id/TextViewNumberRoutesInfoActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></TextView>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="20"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:text="@string/change_password"></Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="20"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:text="@string/tutorial"></Button>

</LinearLayout>