<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_form">
        </TextView>

        <TextView
            android:id="@+id/TextViewNameLocalizationPointDetailsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="15"
        android:orientation="vertical"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_form">
        </TextView>

        <TextView
            android:id="@+id/TextViewDescriptionLocalizationPointDetailsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="25"
        android:orientation="vertical"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/localization_types"></TextView>

        <ListView
            android:id="@+id/ListViewLocalizationTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/validate_location"
            android:layout_marginEnd="5sp"></TextView>

        <ImageButton
            android:id="@+id/ImageButtonGoodDescription"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@drawable/good"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"></ImageButton>

        <ImageButton
            android:id="@+id/ImageButtonBadDescription"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@drawable/bad"
            android:layout_marginStart="8sp"></ImageButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="25"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="50">

            <Button
                android:id="@+id/btnFavouriteLocalizationPointDetails"
                android:layout_width="90sp"
                android:layout_height="90sp"
                android:background="@drawable/empty_star"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="50">

            <Button
                android:id="@+id/btnImageGalleryLocalizationPointDetails"
                android:layout_width="90sp"
                android:layout_height="90sp"
                android:background="@drawable/image_gallery"></Button>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnEditLocalizationPoint"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="15"
        android:text="@string/edit_localization_point"></Button>

</LinearLayout>