<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="33"
        android:layout_margin="5sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:gravity="center">

            <ImageView
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:background="@drawable/click">
            </ImageView>

        </LinearLayout>

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:gravity="center"
            android:text="@string/routes_description_new_route"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="33"
        android:layout_margin="5sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:gravity="center">

            <ImageView
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:background="@drawable/long_click">
            </ImageView>

        </LinearLayout>

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:gravity="center"
            android:text="@string/routes_description_multiple_selection"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="33"
        android:layout_margin="5sp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:gravity="center">

            <ImageView
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:background="@drawable/marker">
            </ImageView>

        </LinearLayout>

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:gravity="center"
            android:text="@string/routes_description_multiple_delete"></TextView>

    </LinearLayout>

</LinearLayout>